add love-request GET and POST api, fixed response for user api
