# index.js
@@ -49,7 +49,7 @@ app.use(
   "/api/suggest-friends",
   require("./routers/api/suggestFriend.route.js"),
 );
-
+app.use("/api/love-request", require("./routers/api/loveRequest.route.js"));
 
 app.use((req, res, next) => {
   res
@@ -61,4 +61,3 @@ server.listen(PORT, () => {
   console.log(`Server is running on port ${PORT}...`);
   console.log(`Swagger at http://localhost:${PORT}/api-docs`);
 });
-
